MiniJavaTokenTests GivenWhenThen-Schemed